--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage": "https://yaroslav20568.github.io/TopCommented_React/",
+  "homepage": "https://yaroslav20568.github.io/TopCommented/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
